# dependent-sum-universe-orphans

./: .travis.yml  ChangeLog.md  dependent-sum-universe-orphans.cabal
src/Data/Some/Universe/: Orphans.hs
