name:                dependent-sum-universe-orphans
version:             0.1.0.1
license:             BSD3
license-file:        LICENSE
author:              Obsidian Systems LLC
maintainer:          maintainer@obsidian.systems
copyright:           2018 Obsidian Systems LLC
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10
synopsis:            Orphan universe instance for dependent-sum
description:         Orphan instances of the Universe class for datatypes defined in dependent-sum
category:            Data

tested-with:
  GHC  ==8.0.2 || ==8.2.2 || ==8.4.4 || ==8.6.5

library
  exposed-modules:     
    Data.Some.Universe.Orphans
  build-depends: base >=4.9 && < 4.13
               , dependent-sum >= 0.4.1 && < 0.7
               , universe >= 1 && < 2
  hs-source-dirs:      src
  default-language:    Haskell2010

source-repository head
  type: git
  location: https://github.com/obsidiansystems/dependent-sum-universe-orphans
